# iroha

example/: genesis.block
example/data_models/test_kv/: __init__.py  irohad.conf  kv_schema.proto
irohad/ametsuchi/: CMakeLists.txt
irohad/ametsuchi/data_models/: CMakeLists.txt  data_model.hpp  data_model_python.cpp  data_model_python.hpp  data_model_registry.cpp  data_model_registry.hpp
irohad/ametsuchi/impl/: data_model_module.cpp  data_model_module.hpp  data_model_registry.cpp  data_model_registry.hpp  mutable_storage_impl.cpp  mutable_storage_impl.hpp  postgres_command_executor.cpp  postgres_command_executor.hpp  postgres_specific_query_executor.cpp  postgres_specific_query_executor.hpp  storage_impl.cpp  storage_impl.hpp  temporary_wsv_impl.cpp  temporary_wsv_impl.hpp
irohad/main/: application.cpp  application.hpp  iroha_conf_loader.cpp  irohad.cpp
shared_model/backend/protobuf/: CMakeLists.txt
shared_model/backend/protobuf/commands/: proto_call_model.hpp  proto_register_data_model.hpp
shared_model/interfaces/: CMakeLists.txt  permissions.hpp
shared_model/interfaces/commands/: call_model.hpp  command.hpp  command_variant.hpp  register_data_model.hpp
shared_model/interfaces/queries/: query.hpp  query_model.hpp  query_variant.hpp
shared_model/interfaces/query_responses/: query_model_response.hpp  query_response.hpp  query_response_variant.hpp
shared_model/schema/: commands.proto  endpoint.proto  primitive.proto  qry_responses.proto  queries.proto
shared_model/validators/: query_validator.hpp
vcpkg/: VCPKG_DEPS_LIST
(+13 files in other folders)
